feat(core): add rules management/executor prototype
